--- a/style.css
+++ b/style.css
@@ -9,6 +9,19 @@ h1 {
     margin-top: 50px;
 }
 
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.container > p a{
+    color: #f44336;
+    text-decoration: none;
+    font-weight: bold;
+}
+
 form {
     margin: 0 auto;
     width: 50%;
@@ -43,3 +56,34 @@ input[type="submit"] {
 input[type="submit"]:hover {
     background-color: #45a049;
 }
+
+table {
+    width: 50%;
+    margin: 0 auto;
+}
+th, td {
+    padding: 10px;
+    text-align: left;
+    background-color: #f2f2f2;
+}
+td > a {
+    text-decoration: none;
+    color: #f44336;
+}
+th {
+    background-color: #f2f2f2;
+}
+button {
+    padding: 10px 20px;
+    background-color: #f44336;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+  }
